--- a/src/stylesheets/Lungo.layout.nav.styl
+++ b/src/stylesheets/Lungo.layout.nav.styl
@@ -16,10 +16,9 @@ nav
     box-pack( justify )
     & > a
       box-flex( 1 )
-  & abbr
-    font-weight: bold
 
   header &
+    font-weigth: 700
     & a
       padding: 0 6px
       min-width: 30px
@@ -41,6 +40,10 @@ nav
         top:  -12px
         left: -12px
         margin-right: -20px
+
+      & abbr
+        font-size: 0.9em
+        font-weight: 700
 
       &.button a
         margin: 5px 5px 5px 0
