--- a/src/stylesheets/Lungo.layout.styl
+++ b/src/stylesheets/Lungo.layout.styl
@@ -94,26 +94,16 @@ header
     margin-left: 4px
     float: left
     z-index: -1
-    font-size: 1.2em
-    font-weight: bold
-
-    &.with-subtitle
-      line-height: 34px
-      & .subtitle
-        position: relative
-        top: -4px
-        display: block
-        font-size: 0.7em
-        line-height: 0.7em
-
+    font-size: 1.1em
+    font-weight: 400
 
     & img
       height: 24px
 
     &.centered
       position: absolute
-      left: 0px
-      right: 0px
+      left: 32px
+      right: 32px
       text-align: center
       display: inline-block
 
