--- a/src/stylesheets/Lungo.base.styl
+++ b/src/stylesheets/Lungo.base.styl
@@ -80,7 +80,7 @@ video
   outline: 0
   padding: 0
   font-size: 100%
-
+  font-weight: normal
 
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section
   display: block
@@ -102,9 +102,7 @@ body
   padding: 0
   width: 100%
   height: 100%
-  overflow-y: visible !important
-  font-size: 13px
-  line-height: 1.231
+  // overflow-y: visible !important
 
   -webkit-user-select:none
   -webkit-touch-callout: none
@@ -126,10 +124,6 @@ a
   &:hover
     opacity: 1
 
-
-b, strong font-weight: bold
-
-
 img
     border: 0
     -ms-interpolation-mode: bicubic
@@ -144,5 +138,4 @@ table
 
 th, td, caption
   vertical-align: top
-  font-weight: normal
   text-align: left
