--- a/src/stylesheets/Lungo.theme.default.styl
+++ b/src/stylesheets/Lungo.theme.default.styl
@@ -8,9 +8,9 @@
  */
 
 @import "import/vendor.styl"
-@import url("http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700");
-@import url("http://fonts.googleapis.com/css?family=Exo:200,400,700");
 @import url("http://fonts.googleapis.com/css?family=Titillium+Web:200,400,700");
+@import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,700")
+
 
 THEME = #0093D5
 THEME_light =  #39ABE1
@@ -28,9 +28,12 @@ NOTIFICATION_alert = #ffb515
 NOTIFICATION_success = #009600
 FORM_border_radius = 1px
 
-.app
+body
   background: #000
-  font-family: "Titillium Web", "Exo","Open Sans Condensed", Helvetica, Arial, sans-serif
+  font-family: "Source Sans Pro", "Titillium Web", Helvetica, Arial, sans-serif
+  font-weight: 300
+  font-size: 16px
+  line-height: 1.3em
 
 .theme
   &, li&, a&
@@ -51,7 +54,6 @@ section
     box-shadow inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.5)
     & .title
       color: #fff
-      text-shadow 0 1px 0 rgba(0,0,0,0.2)
     & .subtitle
       color: #fff
       opacity: 0.7
@@ -140,7 +142,7 @@ footer > nav > a, nav.groupbar > a
 
 
 LIST-border = #ddd
-LIST-color = #2a2a2a
+LIST-color = #333
 
 .list
   & li
@@ -184,10 +186,10 @@ LIST-color = #2a2a2a
   color: #fff
   text-shadow: 0 1px 0px rgba(0,0,0,0.2)
 
+
+/* ____________________ BUTTONS ____________________ */
 .button, button
   border-radius(FORM-border-radius)
-  font-weight: bold
-  text-shadow: 0 -1px 0 rgba(0,0,0,0.3)
   color: white
   border-radius 1px
   box-shadow inset 0 1px 0 rgba(255,255,255,0.2)
@@ -196,6 +198,8 @@ LIST-color = #2a2a2a
   &:active
     box-shadow inset 0 0 128px rgba(0,0,0,0.25)
     border-color: none
+
+
 
 FORM_shadow_form =  'inset 0 1px 2px rgba(0,0,0,0.1)'
 FORM_shadow_form_active =  'inset 0 1px 1px rgba(0,0,0,0.1), 3px 0 #f0eeef, 0 3px #f0eeef, -3px 0 #f0eeef, 0 -3px #f0eeef'
@@ -246,10 +250,8 @@ form, .form
       &.active
         background-color: THEME_light
 
-
     &::-webkit-slider-thumb
       border-radius: FORM-border-radius
-      box-shadow 1px 0 rgba(0,0,0,0.2), -1px 0 rgba(0,0,0,0.2), 0 1px rgba(0,0,0,0.2), 0 -1px rgba(0,0,0,0.2)
       background: #fff
 
     &::-webkit-slider-thumb::after
@@ -259,7 +261,6 @@ form, .form
   & .progress
     .labels
       font-size: 12px
-      font-weight: bold
       line-height: 18px
       color: #858585
 
@@ -270,7 +271,6 @@ form, .form
         & .label
           float: right
           margin-right: 3px
-          font-weight: bold
           color: rgba(0,0,0,0.6)
           text-shadow: 0 1px 0 rgba(255,255,255,0.2) !important
           font-size: 12px
