--- a/src/stylesheets/Lungo.widgets.form.styl
+++ b/src/stylesheets/Lungo.widgets.form.styl
@@ -16,12 +16,8 @@ ROUNDED_RADIUS = 2px
 PROGRESS_HEIGHT = 12px
 
 form, .form
-  &.wrapper input:not([type=checkbox]), textarea, select
-    margin: 3px 0px 3px 0px
-
   & label:not(.select)
-    font-size: 0.95em
-    font-weight: 400
+    font-size: 0.9em
 
   & input, textarea, select, .progress
     margin-bottom: 8px
@@ -33,8 +29,7 @@ form, .form
     height: FORM_INPUT_HEIGHT
     transition all 0.15s linear
     font-family: inherit
-    font-size: 14px
-
+    font-size: inherit
     -webkit-appearance: none
     -webkit-user-select: text
     -webkit-font-smoothing: antialiased
@@ -113,7 +108,6 @@ form, .form
       &.active:after
         float: left
         content: "\0051"
-        font-weight: bold
         font-size: 1.6em
 
 
