--- a/src/stylesheets/Lungo.widgets.styl
+++ b/src/stylesheets/Lungo.widgets.styl
@@ -61,3 +61,32 @@
   font-weight: bold
   line-height: 13px
   text-align: center
+
+/* ================================  TEXT  ================================ */
+.text
+  &.thin
+    font-weight: 200
+  &.book
+    font-weight: 300
+  &.normal
+    font-weight: 400
+  &.bold
+    font-weight: 700
+  &.italic
+    font-style: italic
+  &.underline
+    text-decoration: underline
+  &.line-through
+    text-decoration: line-through
+  &.align_left
+    text-align: left
+  &.align_right
+    text-align: right
+  &.align_center
+    text-align: center
+  &.align_justify
+    text-align: justify
+  &.small
+    font-size: 0.9em
+  &.big
+    font-size: 1.1em
