--- a/src/stylesheets/Lungo.theme.default.styl
+++ b/src/stylesheets/Lungo.theme.default.styl
@@ -8,14 +8,14 @@
  */
 
 @import "import/vendor.styl"
-@import url("http://fonts.googleapis.com/css?family=Titillium+Web:200,400,700");
+@import url("http://fonts.googleapis.com/css?family=Titillium+Web:200,400,700")
 @import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,700")
-
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300,600")
 
 THEME = #0093D5
 THEME_light =  #39ABE1
-THEME = #2A95D3
-THEME_light =  #25AEEB
+
+THEME = #ddd
 THEME_dark = #222
 THEME_dark_current = #111
 THEME_dark_nav = #888
@@ -30,10 +30,12 @@ FORM_border_radius = 1px
 
 body
   background: #000
-  font-family: "Source Sans Pro", "Titillium Web", Helvetica, Arial, sans-serif
-  font-weight: 300
-  font-size: 16px
+  font-family: "Open Sans", "Source Sans Pro","Titillium Web",  Helvetica, Arial, sans-serif
+  font-weight: 400
+  font-size: 15px
   line-height: 1.3em
+
+
 
 .theme
   &, li&, a&
@@ -51,12 +53,9 @@ body
 section
   & > header
     background-color: THEME
-    box-shadow inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.5)
+    box-shadow inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.1)
     & .title
-      color: #fff
-    & .subtitle
-      color: #fff
-      opacity: 0.7
+      color: #333
 
   & > footer
     background-color: THEME-dark
@@ -70,6 +69,7 @@ section
 
   & > article, & > [data-control="pull"]
     background: #f4f5f5
+    background-color: #ddd
 
   &.aside
     box-shadow -1px 0 0 rgba(0,0,0,0.2)
@@ -110,7 +110,7 @@ aside
 
 header nav
   & a
-    color: #fff
+    color: #666
   &.box
     &:not(.right) a
       box-shadow 1px 0 0 rgba(255,255,255,0.2), inset -1px 0 0 rgba(0,0,0,0.2)
@@ -142,7 +142,8 @@ footer > nav > a, nav.groupbar > a
 
 
 LIST-border = #ddd
-LIST-color = #333
+LIST-color = #111
+LIST-color-secondary = #666
 
 .list
   & li
@@ -175,7 +176,7 @@ LIST-color = #333
           color: #fff !important
 
       & small, & .right:not(.bubble)
-        opacity: 0.8
+        color: LIST-color-secondary
 
   &:not(.indented) li
     &.dark, &.theme, &.light
