--- a/src/stylesheets/css/Lungo.theme.default.css
+++ b/src/stylesheets/css/Lungo.theme.default.css
@@ -8,11 +8,12 @@
  */
 @import url("http://fonts.googleapis.com/css?family=Titillium+Web:200,400,700");
 @import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,700");
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300,600");
 body {
   background: #000;
-  font-family: "Source Sans Pro", "Titillium Web", Helvetica, Arial, sans-serif;
-  font-weight: 300;
-  font-size: 16px;
+  font-family: "Open Sans", "Source Sans Pro", "Titillium Web", Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  font-size: 15px;
   line-height: 1.3em;
 }
 .theme,
@@ -23,7 +24,7 @@ a.theme {
 .theme:active,
 li.theme:active,
 a.theme:active {
-  background: #2a95d3;
+  background: #ddd;
 }
 [data-control="pull"] {
   color: #666;
@@ -32,17 +33,13 @@ a.theme:active {
   text-shadow: 0 1px 0 #fff;
 }
 section > header {
-  background-color: #2a95d3;
-  -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.5);
-  -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.5);
-  box-shadow: inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.5);
+  background-color: #ddd;
+  -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.1);
+  -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.1);
+  box-shadow: inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.1);
 }
 section > header .title {
-  color: #fff;
-}
-section > header .subtitle {
-  color: #fff;
-  opacity: 0.7;
+  color: #333;
 }
 section > footer {
   background-color: THEME-dark;
@@ -65,6 +62,7 @@ section > footer > nav a.current {
 section > article,
 section > [data-control="pull"] {
   background: #f4f5f5;
+  background-color: #ddd;
 }
 section.aside {
   -webkit-box-shadow: -1px 0 0 rgba(0,0,0,0.2);
@@ -106,8 +104,8 @@ aside .list li {
   border-bottom-color: #222 !important;
 }
 aside .list li.current {
-  background: #2a95d3;
-  border-bottom-color: #2a95d3;
+  background: #ddd;
+  border-bottom-color: #ddd;
 }
 aside .list li.current strong,
 aside .list li.current small,
@@ -120,7 +118,7 @@ aside .list li .icon {
   color: #888;
 }
 header nav a {
-  color: #fff;
+  color: #666;
 }
 header nav.box:not(.right) a {
   -webkit-box-shadow: 1px 0 0 rgba(255,255,255,0.2), inset -1px 0 0 rgba(0,0,0,0.2);
@@ -150,9 +148,9 @@ section > nav.groupbar {
   background-color: THEME-dark;
 }
 section > nav.groupbar > a.current {
-  -webkit-box-shadow: inset 0 -3px 0 #2a95d3;
-  -moz-box-shadow: inset 0 -3px 0 #2a95d3;
-  box-shadow: inset 0 -3px 0 #2a95d3;
+  -webkit-box-shadow: inset 0 -3px 0 #ddd;
+  -moz-box-shadow: inset 0 -3px 0 #ddd;
+  box-shadow: inset 0 -3px 0 #ddd;
 }
 footer > nav > a,
 nav.groupbar > a {
@@ -168,7 +166,7 @@ nav.groupbar > a.current {
 }
 .list li,
 .list li a {
-  color: #333;
+  color: #111;
 }
 .list li.dark,
 .list li a.dark {
@@ -184,7 +182,7 @@ nav.groupbar > a.current {
 .list li a.selectable:active,
 .list li.theme,
 .list li a.theme {
-  background: #25aeeb;
+  background: #39abe1;
 }
 .list li.selectable:active,
 .list li a.selectable:active,
@@ -224,7 +222,7 @@ nav.groupbar > a.current {
 .list li a small,
 .list li .right:not(.bubble),
 .list li a .right:not(.bubble) {
-  opacity: 0.8;
+  color: #666;
 }
 .list:not(.indented) li.dark,
 .list:not(.indented) li.theme,
@@ -375,7 +373,7 @@ form select:focus,
 form textarea:focus,
 .form textarea:focus {
   background: #fafafa;
-  border-color: #2a95d3;
+  border-color: #ddd;
   color: rgba(0,0,0,0.75);
 }
 form input[type="text"][disabled],
@@ -428,7 +426,7 @@ form input[type=range]:not(.checkbox),
 }
 form input[type=range]:not(.checkbox):active,
 .form input[type=range]:not(.checkbox):active {
-  background-color: #25aeeb;
+  background-color: #39abe1;
 }
 form input[type=range].checkbox,
 .form input[type=range].checkbox {
@@ -437,7 +435,7 @@ form input[type=range].checkbox,
 }
 form input[type=range].checkbox.active,
 .form input[type=range].checkbox.active {
-  background-color: #25aeeb;
+  background-color: #39abe1;
 }
 form input[type=range]::-webkit-slider-thumb,
 .form input[type=range]::-webkit-slider-thumb {
@@ -481,7 +479,7 @@ form .progress .bar .value .label,
   border-radius: 2px;
 }
 .bubble.count {
-  background: #2a95d3;
+  background: #ddd;
 }
 .bubble header .count {
   background: THEME-dark !important;
