--- a/src/stylesheets/Lungo.layout.list.styl
+++ b/src/stylesheets/Lungo.layout.list.styl
@@ -58,7 +58,8 @@
 
     & strong
       position: relative
-      font-weight: 600
+      font-size: FONT_SIZE_BIG
+      font-weight: 400
 
     & small
       display: block
