--- a/src/stylesheets/Lungo.layout.styl
+++ b/src/stylesheets/Lungo.layout.styl
@@ -94,7 +94,7 @@ header
     margin-left: 4px
     float: left
     z-index: -1
-    font-size: 1.1em
+    font-size: FONT_SIZE_BIG
     font-weight: 400
 
     & img
