--- a/src/stylesheets/import/constants.styl
+++ b/src/stylesheets/import/constants.styl
@@ -12,6 +12,10 @@ ASIDE_WIDTH_SMALL = 64px
 
 DEFAULT_TRANSITION = easeOutSine
 
+
+FONT_SIZE_BIG   = 1.15em
+FONT_SIZE_SMALL = 0.9em
+
 /* COLORS */
 WHITE =             #fff
 BLACK =             #000
