--- a/src/stylesheets/Lungo.theme.default.styl
+++ b/src/stylesheets/Lungo.theme.default.styl
@@ -9,7 +9,7 @@
 
 @import "import/vendor.styl"
 @import url("http://fonts.googleapis.com/css?family=Titillium+Web:200,400,700")
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700")
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,700")
 THEME = #0093D5
 THEME_light =  #39ABE1
 
@@ -26,12 +26,22 @@ NOTIFICATION_alert = #ffb515
 NOTIFICATION_success = #009600
 FORM_border_radius = 1px
 
+
+/* COLORS */
+COLOR_SECONDARY = #ccc
+COLOR_CANCEL    = #e33100
+COLOR_ACCEPT    = #009600
+COLOR_THEME     = #237fd7
+
+
+
 body
   background: #000
-  font-family: "Open Sans", "Source Sans Pro","Titillium Web",  Helvetica, Arial, sans-serif
+  font-family: "Open Sans", "Titillium Web",  Helvetica, Arial, sans-serif
   font-weight: 400
-  font-size: 14px
+  font-size: 13px
   line-height: 1.3em
+  letter-spacing: -0.05em
 
 
 
@@ -51,7 +61,7 @@ body
 section
   & > header
     background-color: THEME
-    box-shadow inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.1)
+    box-shadow 0 1px 2px rgba(0,0,0,0.5), inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.1)
     & .title
       color: #fff
 
@@ -67,7 +77,7 @@ section
 
   & > article, & > [data-control="pull"]
     background: #f4f5f5
-    background-color: #ddd
+    // background-color: #ddd
 
   &.aside
     box-shadow -1px 0 0 rgba(0,0,0,0.2)
@@ -139,14 +149,21 @@ footer > nav > a, nav.groupbar > a
 
 
 
-LIST-border = #ddd
+LIST-border = #e5e5e5
 LIST-color = #111
-LIST-color-secondary = #666
+LIST-color-secondary = #555
 
 .list
   & li
     background: #fff
     border-bottom: inset 1px LIST-border
+
+    &.secondary
+      box-shadow: inset 4px 0px 0px COLOR_SECONDARY
+    &.accept
+      box-shadow: inset 4px 0px 0px COLOR_ACCEPT
+    &.cancel
+      box-shadow: inset 4px 0px 0px COLOR_CANCEL
 
     &, & a
       color: LIST-color
@@ -190,7 +207,7 @@ LIST-color-secondary = #666
 .button, button
   border-radius(FORM-border-radius)
   color: white
-  border-radius 1px
+  border-radius 2px
   box-shadow inset 0 1px 0 rgba(255,255,255,0.2)
   border: solid 1px rgba(0,0,0,0.1)
 
@@ -198,7 +215,17 @@ LIST-color-secondary = #666
     box-shadow inset 0 0 128px rgba(0,0,0,0.25)
     border-color: none
 
-
+  &
+    background-color: THEME
+  &.secondary
+    color: #666 !important
+    background-color: COLOR_SECONDARY
+  &.accept
+    background-color: COLOR_ACCEPT
+  &.cancel
+    background-color: COLOR_CANCEL
+  &[disabled]
+    background-color: black
 
 FORM_shadow_form =  'inset 0 1px 2px rgba(0,0,0,0.1)'
 FORM_shadow_form_active =  'inset 0 1px 1px rgba(0,0,0,0.1), 3px 0 #f0eeef, 0 3px #f0eeef, -3px 0 #f0eeef, 0 -3px #f0eeef'
@@ -274,6 +301,7 @@ form, .form
           text-shadow: 0 1px 0 rgba(255,255,255,0.2) !important
           font-size: 12px
 
+
 .bubble
   color: #fff
   border-radius 2px
@@ -308,4 +336,7 @@ form, .form
         background: #000
         border: solid 2px #fff
         box-shadow: 0 0 4px black
+
+
+
 
