--- a/src/stylesheets/css/Lungo.theme.default.css
+++ b/src/stylesheets/css/Lungo.theme.default.css
@@ -7,13 +7,15 @@
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
 @import url("http://fonts.googleapis.com/css?family=Titillium+Web:200,400,700");
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700");
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,700");
+/* COLORS */
 body {
   background: #000;
-  font-family: "Open Sans", "Source Sans Pro", "Titillium Web", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", "Titillium Web", Helvetica, Arial, sans-serif;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 13px;
   line-height: 1.3em;
+  letter-spacing: -0.05em;
 }
 .theme,
 li.theme,
@@ -33,9 +35,9 @@ a.theme:active {
 }
 section > header {
   background-color: #0093d5;
-  -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.1);
-  -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.1);
-  box-shadow: inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.5), inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.1);
+  -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.5), inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.1);
+  box-shadow: 0 1px 2px rgba(0,0,0,0.5), inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.1);
 }
 section > header .title {
   color: #fff;
@@ -61,7 +63,6 @@ section > footer > nav a.current {
 section > article,
 section > [data-control="pull"] {
   background: #f4f5f5;
-  background-color: #ddd;
 }
 section.aside {
   -webkit-box-shadow: -1px 0 0 rgba(0,0,0,0.2);
@@ -161,7 +162,22 @@ nav.groupbar > a.current {
 }
 .list li {
   background: #fff;
-  border-bottom: inset 1px #ddd;
+  border-bottom: inset 1px #e5e5e5;
+}
+.list li.secondary {
+  -webkit-box-shadow: inset 4px 0px 0px #ccc;
+  -moz-box-shadow: inset 4px 0px 0px #ccc;
+  box-shadow: inset 4px 0px 0px #ccc;
+}
+.list li.accept {
+  -webkit-box-shadow: inset 4px 0px 0px #009600;
+  -moz-box-shadow: inset 4px 0px 0px #009600;
+  box-shadow: inset 4px 0px 0px #009600;
+}
+.list li.cancel {
+  -webkit-box-shadow: inset 4px 0px 0px #e33100;
+  -moz-box-shadow: inset 4px 0px 0px #e33100;
+  box-shadow: inset 4px 0px 0px #e33100;
 }
 .list li,
 .list li a {
@@ -195,7 +211,7 @@ nav.groupbar > a.current {
 }
 .list li.light,
 .list li a.light {
-  background: #ddd;
+  background: #e5e5e5;
   -webkit-text-shadow: 0 1px 0 #eee;
   -moz-text-shadow: 0 1px 0 #eee;
   text-shadow: 0 1px 0 #eee;
@@ -221,7 +237,7 @@ nav.groupbar > a.current {
 .list li a small,
 .list li .right:not(.bubble),
 .list li a .right:not(.bubble) {
-  color: #666;
+  color: #555;
 }
 .list:not(.indented) li.dark,
 .list:not(.indented) li.theme,
@@ -242,9 +258,9 @@ button {
   -moz-border-radius: FORM-border-radius;
   border-radius: FORM-border-radius;
   color: #fff;
-  -webkit-border-radius: 1px;
-  -moz-border-radius: 1px;
-  border-radius: 1px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
   -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,0.2);
   -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,0.2);
   box-shadow: inset 0 1px 0 rgba(255,255,255,0.2);
@@ -256,6 +272,27 @@ button:active {
   -moz-box-shadow: inset 0 0 128px rgba(0,0,0,0.25);
   box-shadow: inset 0 0 128px rgba(0,0,0,0.25);
   border-color: none;
+}
+.button,
+button {
+  background-color: #0093d5;
+}
+.button.secondary,
+button.secondary {
+  color: #666 !important;
+  background-color: #ccc;
+}
+.button.accept,
+button.accept {
+  background-color: #009600;
+}
+.button.cancel,
+button.cancel {
+  background-color: #e33100;
+}
+.button[disabled],
+button[disabled] {
+  background-color: #000;
 }
 form label,
 .form label {
