New style for lists

--- a/src/stylesheets/Lungo.layout.list.styl
+++ b/src/stylesheets/Lungo.layout.list.styl
@@ -13,7 +13,7 @@
 .list
   & li
     list-style-type: none
-    padding: 9px
+    padding: 10px
     position: relative
 
     &, & a, & small, & .right
@@ -70,12 +70,11 @@
         margin-top: -12px
 
     & small, &.anchor, & .right
-      font-size: 0.9em
+      font-size: FONT_SIZE_SMALL
 
 
   & .bubble
-    padding-left: 4px
-    padding-right: 4px
+    padding: 1px 5px 3px 5px
 
   & .loading .right
     font-size: 1.0em
