--- a/src/stylesheets/Lungo.layout.styl
+++ b/src/stylesheets/Lungo.layout.styl
@@ -94,8 +94,7 @@ header
     margin-left: 4px
     float: left
     z-index: -1
-    font-size: FONT_SIZE_BIG
-    font-weight: 400
+    font-size: (FONT_SIZE_BIG * 1.2)
 
     & img
       height: 24px
