--- a/src/stylesheets/css/Lungo.widgets.button.css
+++ b/src/stylesheets/css/Lungo.widgets.button.css
@@ -6,8 +6,8 @@
  *
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
-.button,
-button {
+:not(header) .button,
+:not(header) button {
   display: inline-block;
   padding: 10px 16px;
   border: none;
@@ -20,36 +20,37 @@ button {
   text-decoration: none;
   outline: none;
 }
-.button:disabled,
-button:disabled,
-.button.disabled,
-button.disabled {
+:not(header) .button:disabled,
+:not(header) button:disabled,
+:not(header) .button.disabled,
+:not(header) button.disabled {
   background: rgba(255,255,255,0.2);
   color: #999 !important;
 }
-.button .icon,
-button .icon {
+:not(header) .button .icon,
+:not(header) button .icon {
   margin-right: 4px;
+  font-size: 1.2em;
 }
-.button.anchor,
-button.anchor {
+:not(header) .button.anchor,
+:not(header) button.anchor {
   width: 100%;
-  margin-bottom: 4px;
+  position: relative;
 }
-.button.anchor .icon,
-button.anchor .icon {
-  margin-left: 8px;
-  float: left;
+:not(header) .button.anchor .icon,
+:not(header) button.anchor .icon {
+  position: absolute;
+  left: 8px;
 }
-.button.large,
-button.large {
+:not(header) .button.large,
+:not(header) button.large {
   height: 52px;
   padding: 0 24px;
   font-size: 1.4em;
   line-height: 52px;
 }
-.button.small,
-button.small {
+:not(header) .button.small,
+:not(header) button.small {
   height: 28px;
   padding: 0 12px;
   font-size: 0.9em;
