Remove .bubble class to .tag

--- a/src/stylesheets/Lungo.layout.aside.styl
+++ b/src/stylesheets/Lungo.layout.aside.styl
@@ -46,7 +46,7 @@ aside
     position: absolute
     bottom: 0
 
-  & .bubble
+  & .tag
     float: right
 
   &.small
@@ -64,7 +64,7 @@ aside
           width: inherit
           line-height: ASIDE_WIDTH_SMALL
 
-        & .bubble
+        & .tag
           position: relative
           top: -54px
           right: 6px
