--- a/src/stylesheets/Lungo.layout.nav.styl
+++ b/src/stylesheets/Lungo.layout.nav.styl
@@ -35,7 +35,7 @@ nav
         height: 16px
         top: -1px !important
 
-      & .bubble
+      & .tag
         position: relative
         top:  -12px
         left: -12px
@@ -83,7 +83,8 @@ nav
           font-size: 1.0em
           margin-right: 2px
 
-      & .bubble
+      & .tag
+          padding: 1px 3px 3px 3px
           position: relative
           top: -1px
           left: 2px
@@ -102,9 +103,11 @@ nav
       width: 32px
       display: inline-block
 
-    & .bubble
+    & .tag
       top:  -42px
       left: 4px
+      padding: 1px 3px 3px 3px
+
       & .loading
         top: 0
         font-size: 1.4em
@@ -112,7 +115,7 @@ nav
     abbr
       display: none
 
-    & .bubble
+    & .tag
       position: relative
       top:  -12px
       left: -12px
