--- a/src/stylesheets/Lungo.widgets.styl
+++ b/src/stylesheets/Lungo.widgets.styl
@@ -53,13 +53,10 @@
 .round
   border-radius( 4px )
 
-.bubble
+.tag
   display: inline-block
-  padding: 2px 3px
-  min-width: 12px
-  font-size: 0.75em
-  font-weight: bold
-  line-height: 13px
+  font-size: FONT_SIZE_SMALL
+  line-height: FONT_SIZE_BIG
   text-align: center
 
 size = 5px
