--- a/src/stylesheets/Lungo.layout.list.styl
+++ b/src/stylesheets/Lungo.layout.list.styl
@@ -53,7 +53,7 @@
       padding: 2px 10px
       & .icon.small
         margin-right: 2px
-      & .bubble
+      & .tag
         display: none
 
     & strong
@@ -73,8 +73,9 @@
       font-size: FONT_SIZE_SMALL
 
 
-  & .bubble
-    padding: 1px 5px 3px 5px
+  & .tag
+    margin-top: 1px
+    padding: 1px 3px 3px 3px
 
   & .loading .right
     font-size: 1.0em
