--- a/src/stylesheets/css/Lungo.layout.aside.css
+++ b/src/stylesheets/css/Lungo.layout.aside.css
@@ -52,7 +52,7 @@ aside footer {
   position: absolute;
   bottom: 0;
 }
-aside .bubble {
+aside .tag {
   float: right;
 }
 aside.small {
@@ -73,7 +73,7 @@ aside.small nav a .icon {
   width: inherit;
   line-height: 64px;
 }
-aside.small nav a .bubble {
+aside.small nav a .tag {
   position: relative;
   top: -54px;
   right: 6px;
