--- a/src/stylesheets/css/Lungo.theme.default.css
+++ b/src/stylesheets/css/Lungo.theme.default.css
@@ -145,7 +145,7 @@ header nav.button a:active {
   background: rgba(0,0,0,0.2);
 }
 section > nav.groupbar {
-  background-color: THEME-dark;
+  background-color: #222;
 }
 section > nav.groupbar > a.current {
   -webkit-box-shadow: inset 0 -3px 0 #0093d5;
@@ -235,8 +235,8 @@ nav.groupbar > a.current {
 }
 .list li small,
 .list li a small,
-.list li .right:not(.bubble),
-.list li a .right:not(.bubble) {
+.list li .right:not(.tag),
+.list li a .right:not(.tag) {
   color: #555;
 }
 .list:not(.indented) li.dark,
@@ -293,6 +293,26 @@ button.cancel {
 .button[disabled],
 button[disabled] {
   background-color: #000;
+}
+button.theme,
+.button.theme,
+.tag.theme {
+  background-color: #0093d5;
+}
+button.secondary,
+.button.secondary,
+.tag.secondary {
+  background-color: #ccc;
+}
+button.accept,
+.button.accept,
+.tag.accept {
+  background-color: #009600;
+}
+button.cancel,
+.button.cancel,
+.tag.cancel {
+  background-color: #e33100;
 }
 form label,
 .form label {
@@ -508,30 +528,28 @@ form .progress .bar .value .label,
   text-shadow: 0 1px 0 rgba(255,255,255,0.2) !important;
   font-size: 12px;
 }
-.bubble {
+.tag {
   color: #fff;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   border-radius: 2px;
+  font-weight: 400 !important;
 }
-.bubble.count {
+.tag.count {
   background: #0093d5;
 }
-.bubble header .count {
+.tag header .count {
   background: THEME-dark !important;
 }
-.bubble footer .bubble {
+footer .tag {
   -webkit-box-shadow: inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5);
   -moz-box-shadow: inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5);
   box-shadow: inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5);
 }
-.bubble article .list .bubble {
+article .list .tag {
   -webkit-box-shadow: inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3);
   -moz-box-shadow: inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3);
   box-shadow: inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3);
-}
-.bubble aside .list .bubble {
-  background: rgba(0,0,0,0.25);
 }
 .notification {
   color: #fff;
