--- a/src/stylesheets/css/Lungo.widgets.css
+++ b/src/stylesheets/css/Lungo.widgets.css
@@ -54,13 +54,10 @@
   -moz-border-radius: 4px;
   border-radius: 4px;
 }
-.bubble {
+.tag {
   display: inline-block;
-  padding: 2px 3px;
-  min-width: 12px;
-  font-size: 0.75em;
-  font-weight: bold;
-  line-height: 13px;
+  font-size: 0.9em;
+  line-height: 1.2em;
   text-align: center;
 }
 .margin.bottom {
