--- a/src/stylesheets/Lungo.widgets.styl
+++ b/src/stylesheets/Lungo.widgets.styl
@@ -71,6 +71,8 @@ size = 5px
   &.normal
     font-weight: 400
   &.bold
+    font-weight: 600
+  &.extra-bold
     font-weight: 700
   &.italic
     font-style: italic
